# HDNA-Workbench

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  demo_adapters.py  demo_curricula.py  demo_hdna.py  demo_tools.py  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
docs/: adapters.md  benchmark_results.md  compliance.md  curricula.md  custom-games.md  getting-started.md  hdna-core.md  inspection.md  tools.md
examples/: custom_curriculum.json
experiments/: README.md
experiments/curriculum_mastery/: README.md  multi_seed.py  run.py
experiments/daemon_phases/: README.md  demotion.py  multi_seed.py  run.py
experiments/expert_routing/: README.md  multi_seed.py  run.py
experiments/gate_specialization/: README.md  multi_seed.py  run.py
experiments/head_tagging/: README.md  induction_data.py  run.py  visualize.py
experiments/parity_transformer/: README.md  baseline.py  data.py  metrics.py  plot.py  plot_cloud.py  run_sweep.py  train.py
experiments/scaffold_decay/: README.md  multi_seed.py  run.py
experiments/shadow_graduation/: README.md  run.py
experiments/stress_homeostasis/: README.md  multi_seed.py  run.py
experiments/tinystories_bench/: README.md  data.py  plot.py  run.py  trace_probe.py
scripts/: README.md  run_on_cloud.sh
workbench/: __init__.py
workbench/adapters/: __init__.py  api_adapter.py  hdna_adapter.py  huggingface_adapter.py  onnx_adapter.py  protocol.py  pytorch_adapter.py
workbench/core/: __init__.py  audit.py  brain.py  curriculum.py  daemon.py  fast.py  gate.py  inspectable_transformer.py  neuron.py  shadow.py  stress.py
workbench/curricula/: __init__.py  demo_cur.py  language_cur.py  math_cur.py  registry.py  spatial_cur.py
workbench/inspectable/: __init__.py  activation.py  attention.py  base.py  container.py  convert.py  convolution.py  embedding.py  linear.py  normalization.py  trace.py  transformer.py
workbench/tools/: __init__.py  compare.py  daemon_studio.py  experiment.py  (+3 more)
(+98 files in other folders)
